--- a/salesApp/app/assets/javascripts/home/home.html
+++ b/salesApp/app/assets/javascripts/home/home.html
@@ -1,1 +1,8 @@
-hey im at home
+<nav>
+  <ul>
+    <li><a ui-sref=".login">Login</a></li>
+    <li><a ui-sref=".register">Register</a></li>
+  </ul>
+</nav>
+
+<ui-view></ui-view>
