added login styling

--- a/salesApp/app/assets/javascripts/home/login.html
+++ b/salesApp/app/assets/javascripts/home/login.html
@@ -1,4 +1,4 @@
-<form class="ui middle aligned center aligned grid" ng-submit="vm.login()">
+<!-- <form class="ui middle aligned center aligned grid" ng-submit="vm.login()">
   <div class= "column">
     <div class="ui form">
     <h2 class="ui blue header">Login</h2>
@@ -18,6 +18,22 @@
       </div>
       <button class="ui blue submit button" name="loginForm">Login</button>
     </div>
-  </form>
+  </form> -->
 
+<div class="container">
+    <div class="login-container">
+            <div id="output"></div>
+            <div class="avatar"></div>
+            <div class="form-box">
+                <form ng-submit="vm.login()">
+                    <input name="user" type="email" placeholder="Email" ng-model="vm.userForm.email" required>
+                    <div class="password">
+                        <input type="password" id="passwordfield" ng-model="vm.userForm.password" required placeholder="password">
+                        <span class="glyphicon glyphicon-eye-open"></span>
+                    </div>
+                    <button class="btn btn-block login" name="loginForm" type="submit">Login</button>
+                </form>
+            </div>
+        </div>       
+</div>
 
