--- a/salesApp/app/assets/javascripts/home/home.html
+++ b/salesApp/app/assets/javascripts/home/home.html
@@ -1,9 +1,31 @@
-<nav>
-  <ul>
-    <li><a ui-sref=".login">Login</a></li>
-    <li><a ui-sref=".register">Register</a></li>
-  </ul>
-</nav>
+<nav class="navbar navbar-inverse bg-inverse" role="navigation">
+        <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-brand-centered">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <div class="navbar-brand navbar-brand-centered">Victory Lap</div>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar-brand-centered">
+          <!-- <ul class="nav navbar-nav">
+            <li><a ng-show="!vm.user" ui-sref=".login">Login</a></li>
+            <li><a ng-show="!vm.user" ui-sref=".register">Register</a></li>
+            <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li>
+          </ul> -->
+          <ul class="nav navbar-nav navbar-right">
+            <li><a ng-show="!vm.user" ui-sref=".login">Login</a></li>
+            <li><a ng-show="!vm.user" ui-sref=".register">Register</a></li>
+            <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li>           
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
 
 {{vm.user.email}}
 <ui-view></ui-view>
