setup rails register route to create users

--- a/salesApp/app/assets/javascripts/home/navbar.html
+++ b/salesApp/app/assets/javascripts/home/navbar.html
@@ -19,7 +19,7 @@
             <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li>
           </ul> -->
           <ul class="nav navbar-nav navbar-right">
-            <li><a ng-show="!vm.user" ui-sref=".login">Login</a></li>
+            <li><a ng-show="!vm.user" ng-click="showLoginForm = !showLoginForm" href="/">Login</a></li>
             <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li>           
           </ul>
         </div><!-- /.navbar-collapse -->
