--- a/salesApp/app/assets/javascripts/home/navbar.html
+++ b/salesApp/app/assets/javascripts/home/navbar.html
@@ -19,6 +19,7 @@
             <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li>
           </ul> -->
           <ul class="nav navbar-nav navbar-right">
+            <!-- <li><a ng-show="vm.user.access_level === 'super_admin' && !vm.user" ui-sref=".register">Register</a></li> -->
             <li><a ng-show="!vm.user" ng-click="showLoginForm = !showLoginForm" href="/">Login</a></li>
             <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li>           
           </ul>
