blocked someone that isnt locked in to go to other routes

--- a/salesApp/app/assets/javascripts/home/profile.html
+++ b/salesApp/app/assets/javascripts/home/profile.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-      <h2>{{vm.user.first_name}} {{vm.user.last_name}}'s User Profile</h2><h2 ng-show="vm.user.access_level === 'company_admin'">- Company: {{vm.user.company}}</h2>
+      <h2>{{vm.user.first_name}} {{vm.user.last_name}}'s User Profile</h2><h2 ng-show="vm.user.access_level === 'company_admin'">Company: {{vm.user.company}}</h2>
       <h2>Email: {{vm.user.email}}</h2>
       <h2>Phone: {{vm.user.phone}}</h2>
       <h2>Profile Type: {{vm.user.access_level}}</h2>
