--- a/salesApp/app/assets/javascripts/home/users.html
+++ b/salesApp/app/assets/javascripts/home/users.html
@@ -66,7 +66,7 @@
 
         </div>
         <div class="form-group">
-        <textarea rows="2" class="form-control" placeholder="Add Notes" ng-model='vm.selectedUser.notes'></textarea>
+        <textarea rows="2" class="form-control" placeholder="Add Notes" ng-model="vm.selectedUser.notes"></textarea>
     
         
         </div>
