--- a/salesApp/app/assets/javascripts/home/candidates.html
+++ b/salesApp/app/assets/javascripts/home/candidates.html
@@ -35,7 +35,7 @@
     <td><a href="{{user.resume_url}}" target="_blank">Resume</a></td>
     <td>{{user.college}}/{{user.college_graduation}}/{{user.major}}</td>
     <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ng-click="vm.modalUpdate(user)"><span class="glyphicon glyphicon-eye-open"></span></button></p></td>
-    <td><button class="btn btn-success btn-xs">Interview</button></td>
+    <td><button class="btn btn-success btn-xs" ng-click="vm.setupInterview(user, vm.user)">Interview</button></td>
     <!-- <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td> -->
     </tr>
     
@@ -60,7 +60,7 @@
         <h4 class="modal-title custom_align" id="Heading">{{vm.selectedUser.first_name}} {{vm.selectedUser.last_name}}</h4>
       </div>
           <div class="modal-body">
-            <h3>{{vm.selectedUser.notes}}</h3>
+            <h3>Notes: {{vm.selectedUser.notes}}</h3>
             <h3>Any more details we want to add privately....</h3>
             <button class="btn btn-success">Interview</button>
           </div>
