--- a/salesApp/app/assets/javascripts/home/users.html
+++ b/salesApp/app/assets/javascripts/home/users.html
@@ -29,7 +29,7 @@
     <td>{{user.hired}}</td>
     <td>{{user.access_level}}</td>
     <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ng-click="vm.modalUpdate(user)"><span class="glyphicon glyphicon-pencil"></span></button></p></td>
-    <!-- <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td> -->
+    <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ng-click="vm.modalUpdate(user)"><span class="glyphicon glyphicon-trash"></span></button></p></td>
     </tr>
     
     </tbody>
@@ -95,7 +95,7 @@
        
       </div>
         <div class="modal-footer ">
-        <button type="button" class="btn btn-success" ><span class="glyphicon glyphicon-ok-sign"></span> Yes</button>
+        <button type="button" class="btn btn-success" ng-click="vm.deleteUser(vm.selectedUser)"><span class="glyphicon glyphicon-ok-sign"></span> Yes</button>
         <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> No</button>
       </div>
         </div>
