--- a/salesApp/app/assets/javascripts/home/profile.html
+++ b/salesApp/app/assets/javascripts/home/profile.html
@@ -1,12 +1,13 @@
-<div class="row">
+<div class="row" id="alertsLocation">
   <div class="col-md-6">
       <h2>{{vm.user.first_name}} {{vm.user.last_name}}'s User Profile</h2><h4 ng-show="vm.user.access_level === 'company_admin'">Company: {{vm.user.company}}</h4>
+
       <h4>Email: {{vm.user.email}}</h4>
       <h4>Phone: {{vm.user.phone}}</h4>
       <h4>Profile Type: {{vm.user.access_level}}</h4>
       <h4 ng-show="vm.user.access_level === 'candidate'">Zipcode: {{vm.user.zipcode}}</h4>
-      <h4 ng-show="vm.user.access_level === 'candidate'"><a href="{{vm.user.linkedin}}" target="_blank">Linkedin</h4></a>
-      <h4 ng-show="vm.user.access_level === 'candidate'"><a href="{{vm.user.resume_url}}" target="_blank">Resume</a></h4>
+      <h4 ng-show="vm.user.access_level === 'candidate'"><a href="{{vm.user.linkedin}}" target="_blank">Linkedin: {{vm.user.linkedin}}</h4></a>
+      <h4 ng-show="vm.user.access_level === 'candidate'"><a href="{{vm.user.resume_url}}" target="_blank">Resume: {{vm.user.resume_url}}</a></h4>
       <h4 ng-show="vm.user.access_level === 'candidate'">College: {{vm.user.college}}</h4>
       <h4 ng-show="vm.user.access_level === 'candidate'">Major: {{vm.user.major}}</h4>
       <h4 ng-show="vm.user.access_level === 'candidate'">College Graduation Year: {{vm.user.college_graduation}}</h4>
