--- a/salesApp/app/assets/javascripts/home/candidates.html
+++ b/salesApp/app/assets/javascripts/home/candidates.html
@@ -1,9 +1,5 @@
 <div class="container">
     <div class="row">
-        
-        <input class="prompt" type="text" placeholder="Search Graduated" ng-model="searchBox.graduated">
-        <input class="prompt" type="text" placeholder="Search Hired" ng-model="searchBox.hired">
-        <p>*Search true or false</p>
         <div class="col-md-12">
         <h4>Users</h4>
         <div class="table-responsive">
@@ -12,26 +8,32 @@
                                  <thead>
                                   <th>First Name</th>
                                   <th>Last Name</th>
-                                  <th>Email</th>
-                                  <th>Phone</th>
-                                  <th>Graduated?</th>
-                                  <th>Hired?</th>
+                                  <th>Graduated?  <select ng-model="searchBox.graduated">
+                                                    <option value="true">Yes</option>
+                                                    <option value="false">No</option>
+                                                  </select></th>
+                                  <th>Hired? <select ng-model="searchBox.hired">
+                                                    <option value="true">Yes</option>
+                                                    <option value="false">No</option>
+                                                  </select></th></th>
                                   <th>Linkedin</th>
                                   <th>Resume</th>
-                                  <th>College/Graduation Year/Major</th>
+                                  <th>College</th>
+                                  <th>Graduation Year</th>
+                                  <th>Major</th>
                                  </thead>
                   <tbody ng-repeat="user in vm.users | orderBy: '-created_at' | filter:{access_level: 'candidate'} | filter:searchBox.graduated | filter:searchBox.hired">
                   
                                   <tr>
                                   <td>{{user.first_name}}</td>
                                   <td>{{user.last_name}}</td>
-                                  <td>{{user.email}}</td>
-                                  <td>{{user.phone}}</td>
-                                  <td>{{user.graduated}}</td>
-                                  <td>{{user.hired}}</td>
+                                  <td>{{user.graduated ? 'Yes' : 'No'}}</td>
+                                  <td>{{user.hired ? 'Yes' : 'No'}}</td>
                                   <td><a href="{{user.linkedin}}" target="_blank">Linkedin</a></td>
                                   <td><a href="{{user.resume_url}}" target="_blank">Resume</a></td>
-                                  <td>{{user.college}}/{{user.college_graduation}}/{{user.major}}</td>
+                                  <td>{{user.college}}</td>
+                                  <td>{{user.college_graduation}}</td>
+                                  <td>{{user.major}}</td>
                                   <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ng-click="vm.modalUpdate(user)"><span class="glyphicon glyphicon-eye-open"></span></button></p></td>
                                   <td><button class="btn btn-success btn-xs" ng-click="vm.setupInterview(user, vm.user)">Interview</button></td>
                                   <!-- <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td> -->
