--- a/salesApp/app/assets/javascripts/home/modals/candidates_show.html
+++ b/salesApp/app/assets/javascripts/home/modals/candidates_show.html
@@ -4,6 +4,8 @@
           <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
         <h4 class="modal-title custom_align" id="Heading">{{vm.selectedUser.first_name}} {{vm.selectedUser.last_name}}</h4>
+        <p >{{vm.selectedUser.email}}</p>
+        <p>{{vm.selectedUser.phone</p>
       </div>
           <div class="modal-body">
             <h3>Notes: {{vm.selectedUser.notes}}</h3>
