--- a/salesApp/app/assets/javascripts/home/candidates.html
+++ b/salesApp/app/assets/javascripts/home/candidates.html
@@ -8,21 +8,22 @@
                                  <thead>
                                   <th>First Name</th>
                                   <th>Last Name</th>
-                                  <th>Graduated?  <select ng-model="searchBox.graduated">
+                                  <th>Graduated?<select ng-model="searchBox.graduated">
                                                     <option value="true">Yes</option>
                                                     <option value="false">No</option>
                                                   </select></th>
-                                  <th>Hired? <select ng-model="searchBox.hired">
+                                  <th>Hired?<select ng-model="searchBox.hired">
                                                     <option value="true">Yes</option>
                                                     <option value="false">No</option>
                                                   </select></th></th>
                                   <th>Linkedin</th>
                                   <th>Resume</th>
                                   <th>College</th>
-                                  <th>Graduation Year</th>
+                                  <th>Graduation Year<select ng-model="searchBox.graduation" ng-options="user.college_graduation for user in vm.users | unique: 'college_graduation'">
+                                                    </select></th>
                                   <th>Major</th>
                                  </thead>
-                  <tbody ng-repeat="user in vm.users | orderBy: '-created_at' | filter:{access_level: 'candidate'} | filter:searchBox.graduated | filter:searchBox.hired">
+                  <tbody ng-repeat="user in vm.users | orderBy: '-created_at' | filter:{access_level: 'candidate'} | filter:searchBox.graduated | filter:searchBox.hired | filter:searchBox.graduation">
                   
                                   <tr>
                                   <td>{{user.first_name}}</td>
