--- a/salesApp/app/assets/javascripts/home/candidates.html
+++ b/salesApp/app/assets/javascripts/home/candidates.html
@@ -18,12 +18,14 @@
                                                   </select></th></th>
                                   <th>Linkedin</th>
                                   <th>Resume</th>
-                                  <th>College</th>
+                                  <th>College<select ng-model="searchBox.college" ng-options="user.college for user in vm.users | unique:'college'">
+                                                    </select></th>
                                   <th>Graduation Year<select ng-model="searchBox.graduation" ng-options="user.college_graduation for user in vm.users | unique: 'college_graduation'">
                                                     </select></th>
-                                  <th>Major</th>
+                                  <th>Major<select ng-model="searchBox.major" ng-options="user.major for user in vm.users | unique:'major'">
+                                                    </select></th>
                                  </thead>
-                  <tbody ng-repeat="user in vm.users | orderBy: '-created_at' | filter:{access_level: 'candidate'} | filter:searchBox.graduated | filter:searchBox.hired | filter:searchBox.graduation">
+                  <tbody ng-repeat="user in vm.users | orderBy: '-created_at' | filter:{access_level: 'candidate'} | filter:searchBox.graduated | filter:searchBox.hired | filter:searchBox.graduation | filter:searchBox.college | filter:searchBox.major">
                   
                                   <tr>
                                   <td>{{user.first_name}}</td>
@@ -36,7 +38,7 @@
                                   <td>{{user.college_graduation}}</td>
                                   <td>{{user.major}}</td>
                                   <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ng-click="vm.modalUpdate(user)"><span class="glyphicon glyphicon-eye-open"></span></button></p></td>
-                                  <td><button class="btn btn-success btn-xs" ng-click="vm.setupInterview(user, vm.user)">Interview</button></td>
+                                  <td><button class="btn btn-success btn-xs" ng-click="vm.setupInterview(user, vm.user)" ng-really-message="Are you sure you want to interview this candidate? This will send a direct email to them."? ng-really-click="takeAction()">Interview</button></td>
                                   <!-- <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td> -->
                                   </tr>
                   
