fixed really click directive in html

--- a/salesApp/app/assets/javascripts/home/modals/candidates_show.html
+++ b/salesApp/app/assets/javascripts/home/modals/candidates_show.html
@@ -15,7 +15,7 @@
       </div>
           <div class="modal-body">
             <h3>Victory Lap's Notes: {{vm.selectedUser.notes}}</h3>
-            <button class="btn btn-success" ng-click="vm.setupInterview(user, vm.user)" ng-really-message="Are you sure you want to interview this candidate? This will send a direct email to them."? ng-really-click="takeAction()">Interview</button>
+            <button class="btn btn-success" ng-really-message="Are you sure you want to interview this candidate? This will send a direct email to them."? ng-really-click="vm.setupInterview(user, vm.user)">Interview</button>
           </div>
       </div>
   </div>
