added styling to profile and other fields for candidates

--- a/salesApp/app/assets/javascripts/home/modals/candidates_show.html
+++ b/salesApp/app/assets/javascripts/home/modals/candidates_show.html
@@ -6,7 +6,7 @@
         <h4 class="text-center">{{vm.selectedUser.first_name}} {{vm.selectedUser.last_name}}</h4>
         <p class="text-center">{{vm.selectedUser.email}}, {{vm.selectedUser.phone}}</p>
         <br>
-        <p>Currently Reading: {{vm.user.books}}</p>
+        <p>Currently Reading: <span>{{vm.user.books}}</span></p>
         <p>Favorite Book: {{vm.user.fav_book}}</p>
         <p>Favorite Food: {{vm.user.food}}</p>
         <p>Hobbies: {{vm.user.hobbies}}</p>
