--- a/salesApp/app/assets/javascripts/home/candidates.html
+++ b/salesApp/app/assets/javascripts/home/candidates.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-        <h4>Users</h4>
+        <h4>Candidates</h4>
         <div class="table-responsive">
               <table id="mytable" cellspacing="10" class="table table-bordred table-striped">
                                  
