added interviewee table and associations

--- a/salesApp/app/assets/javascripts/home/candidates.html
+++ b/salesApp/app/assets/javascripts/home/candidates.html
@@ -3,7 +3,7 @@
         <div class="col-md-12 outlineJob">
         <h4>Candidates</h4>
         <div class="table-responsive">
-              <table id="mytable" cellspacing="10" class="table table-hover">
+              <table id="mytable" cellspacing="10" class="table">
                                  
                                  <thead>
                                   <th>First Name</th>
