--- a/salesApp/app/assets/javascripts/home/profile.html
+++ b/salesApp/app/assets/javascripts/home/profile.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6 marginColumn">
+  <div class="col-md-6 marginColumn outlineJob">
       <h2>{{vm.user.first_name}} {{vm.user.last_name}}'s Profile</h2><h4 ng-show="vm.user.access_level === 'company_admin'">Company: {{vm.user.company}}</h4>
       <h4>Email: {{vm.user.email}}</h4>
       <h4>Phone: {{vm.user.phone}}</h4>
