--- a/salesApp/app/assets/javascripts/jobs/jobs.html
+++ b/salesApp/app/assets/javascripts/jobs/jobs.html
@@ -40,16 +40,18 @@
                                         <th>Qualifications</th>
                                         <th>Benefits</th>
                                         <th>Salary</th>
+                                        <th>URL</th>
                                         <button class="btn-primary btn text-center" ng-click="showCreateJob = !showCreateJob">Create A Job</button>
                                        </thead>
                         <tbody ng-repeat="job in vm.jobs | filter:{user_id: vm.user.id} ">
                         
                                         <tr>
-                                        <td>{{job.title}}</td>
-                                        <td>{{job.description}}</td>
-                                        <td>{{job.qualifications}}</td>
-                                        <td>{{job.benefits}}</td>
-                                        <td>{{job.salary}}</td>
+                                        <td id="truncate-text">{{job.title}}</td>
+                                        <td id="truncate-text">{{job.description}}</td>
+                                        <td id="truncate-text">{{job.qualifications}}</td>
+                                        <td id="truncate-text">{{job.benefits}}</td>
+                                        <td id="truncate-text">{{job.salary}}</td>
+                                        <td id="truncate-text"><a target="_blank" href="{{job.url}}">{{job.url}}</a></td>
                                         <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" ui-sref="home.jobShow({id: job.id})"><span class="glyphicon glyphicon-eye-open"></span></button></p></td>
                                         <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ng-click="vm.modalJob(job)"><span class="glyphicon glyphicon-trash"></span></button></p></td>
                                         </tr>
