--- a/salesApp/app/assets/javascripts/jobs/jobs.html
+++ b/salesApp/app/assets/javascripts/jobs/jobs.html
@@ -11,9 +11,9 @@
                     <input placeholder="Title" class="row form-group" type="text" name="title" ng-model="jobModel.title">
                     <textarea class="row form-group" placeholder="Description" rows="6" cols="30" name="description" ng-model="jobModel.description"></textarea>
                     <textarea placeholder="Qualifications" class="row form-group" rows="6" cols="30" name="qualifications" ng-model="jobModel.qualifications"></textarea>
-                    <textarea placeholder="Benefits" class="row form-group" rows="6" cols="30" name="benefits" ng-model="jobModel.benefits"></textarea><br>
-                    <input  placeholder="Salary" class="row form-group" type="text" name="salary" ng-model="jobModel.salary"><br>
-                    <input placeholder="URL" class="row form-group" type="url" name="url">
+                    <textarea placeholder="Benefits" class="row form-group" rows="6" cols="30" name="benefits" ng-model="jobModel.benefits"></textarea>
+                    <input  placeholder="Salary" class="row form-group" type="text" name="salary" ng-model="jobModel.salary">
+                    <input placeholder="URL" class="row form-group" type="url" name="url" ng-model="jobModel.url">
                     <button class="btn btn-success login" name="jobForm" type="submit">Create Job</button>
                 </form>
             </div>
@@ -52,7 +52,7 @@
                                         <td id="truncate-text">{{job.benefits}}</td>
                                         <td id="truncate-text">{{job.salary}}</td>
                                         <td id="truncate-text"><a target="_blank" href="{{job.url}}">{{job.url}}</a></td>
-                                        <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" ui-sref="home.jobShow({id: job.id})"><span class="glyphicon glyphicon-eye-open"></span></button></p></td>
+                                        <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-success btn-xs" ui-sref="home.jobShow({id: job.id})"><span class="glyphicon glyphicon-eye-open"></span></button></p></td>
                                         <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ng-click="vm.modalJob(job)"><span class="glyphicon glyphicon-trash"></span></button></p></td>
                                         </tr>
                         
