--- a/salesApp/app/assets/javascripts/home/candidates.html
+++ b/salesApp/app/assets/javascripts/home/candidates.html
@@ -40,7 +40,7 @@
                                   <td>{{user.college_graduation}}</td>
                                   <td>{{user.major}}</td>
                                   <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ng-click="vm.modalUpdate(user)"><span class="glyphicon glyphicon-eye-open"></span></button></p></td>
-                                  <td><button class="btn btn-success btn-xs" ng-really-message="Are you sure you want to interview this candidate? This will send a direct email to them."? ng-really-click="vm.setupInterview(user, vm.user)">Interview</button></td>
+                                  <td><button class="btn btn-success btn-xs" ng-really-message="Are you sure you want to interview this candidate? This will send a direct email to them."? ng-really-click="vm.setupInterview(user, vm.user, jobSelect.id)">Interview</button></td>
                                   <td><select ng-model="jobSelect" ng-options="job.title for job in vm.user.jobs"></select></td>
                                   <!-- <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td> -->
                                   </tr>
